# pants-editor

./: Cargo.toml  README.md
src/: cli.rs  command.rs  config.rs  cursor.rs  editor.rs  highlighter.rs  main.rs  renderer.rs  search.rs  ui.rs  util.rs  word.rs
src/config/: color.rs  mod.rs  settings.rs  theme.rs
